force-app/main/default/objects/Song__c/Song__c.object-meta.xml
<CustomObject>
    <label>Song</label>
    <nameField>
        <label>Song Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Songs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>