force-app/main/default/objects/Song__c/fields/Album__c.field-meta.xml
<CustomField>
    <fullName>Album__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Album</label>
    <referenceTo>Album__c</referenceTo>
    <relationshipLabel>Songs</relationshipLabel>
    <relationshipName>Songs</relationshipName>
    <type>Lookup</type>
</CustomField>