force-app/main/default/objects/Song__c/fields/Writer_Composer__c.field-meta.xml
<CustomField>
    <fullName>Writer_Composer__c</fullName>
    <label>Writer/Composer</label>
    <length>60</length>
    <type>Text</type>
</CustomField>